<resources>
    <string name="app_name">HealthScanner</string>

    <!-- Strings for node.js URLs -->
    <string name="url_register">http://192.168.1.5:3000/insert</string>


    <!-- Strings related to login -->
    <string name="prompt_firstname">Firstname</string>
    <string name="prompt_lastname">Lastname</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_confirm">Confirm Email</string>
    <string name="prompt_date_of_birth">Date of birth (DD/MM/YYYY)</string>
    <string name="prompt_city">City (optional)</string>
    <string name="prompt_male">Male</string>
    <string name="prompt_female">Female</string>

    <string name="action_sign_in">Sign in</string>
    <string name="message_register">Are you new to HealthScanner?\nIt will take only a couple of minutes to sign up! </string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">EEnter</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="google_api_key"> AIzaSyAGLH4emxZOISfgn3YdThNnIj9WO1gtV9M </string>


</resources>
