<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:fillViewport="true"
    android:background="@drawable/login_background">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidprojects.pablo.healthscanner.LoginActivity">


<!-- Login progress -->

    <ProgressBar
        android:id="@+id/ar_register_progress"
        style="android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />



    <LinearLayout
        android:id="@+id/ar_register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHalf">

            <EditText
                android:id="@+id/ar_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_firstname"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLines="1"/>
            <!--android:singleLine="true" -->


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHalf">

            <EditText
                android:id="@+id/ar_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_lastname"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLines="1"/>
            <!--android:singleLine="true" -->


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHalf">

            <EditText
                android:id="@+id/ar_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLines="1"/>
            <!--android:singleLine="true" -->


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHalf">

            <EditText
                android:id="@+id/ar_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1" />
            <!--android:singleLine="true" -->

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHalf">

            <EditText
                android:id="@+id/ar_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_confirm"
                android:inputType="textPassword"
                android:maxLines="1"/>
            <!--android:singleLine="true" -->

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHalf">

            <EditText
                android:id="@+id/ar_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="text|textEmailAddress"
                android:maxLines="1"/>
            <!--android:singleLine="true" -->

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHalf">

            <EditText
                android:id="@+id/ar_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_date_of_birth"
                android:inputType="date"
                android:maxLines="1"/>
            <!--android:singleLine="true" -->

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHalf">

            <AutoCompleteTextView
                android:id="@+id/ar_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_city"
                android:inputType="text"
                android:maxLines="1"/>
            <!--android:singleLine="true" -->

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/ar_gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="0dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@color/colorHalf"
            >
            <RadioButton
                android:id="@+id/ar_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:textSize="14dp"
                android:text="@string/prompt_male"
                />
            <RadioButton
                android:id="@+id/ar_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:textSize="14dp"
                android:text="@string/prompt_female"
                />
        </RadioGroup>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/ar_register_button"
            style="android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_register"
            android:textStyle="bold"
            android:textColor="@color/colorFull"
            android:background="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>

</ScrollView>